module(
    name = "cmdliner",
    version = "1.1.1",
    compatibility_level = 1,
    bazel_compatibility = [">=6.0.0"]
)

bazel_dep(name = "platforms",    version = "0.0.7")
bazel_dep(name = "bazel_skylib", version = "1.4.2")

bazel_dep(name = "rules_ocaml",  version = "2.0.0")

## in coswitch:
bazel_dep(name = "ocaml",           version = "0.0.0")
register_toolchains("@ocaml//toolchain/selectors/local:all")
register_toolchains("@ocaml//toolchain/profiles:all")
